fix: tweak spacing again

--- a/src/assets/styles/components/_button.scss
+++ b/src/assets/styles/components/_button.scss
@@ -33,7 +33,7 @@ a.button {
     line-height: 1;
     margin: 0;
     min-width: rem(268);
-    padding: rem(8) 0;
+    padding: rem(9) 0 rem(7);
     text-decoration: none;
     width: auto;
 
